namespace Managers.Archive
{
    [System.Serializable]
    public abstract class ArchiveBank
    {
        
    }
}